First update for 1.21 support